Added 'explanation' environment. Now explanations use 'tabularx'. Updated all explanations in samples.

--- a/MiKTeX/sec_arch_and_mod.tex
+++ b/MiKTeX/sec_arch_and_mod.tex
@@ -393,12 +393,11 @@ end
         - \log \Gamma(n_{ij} + \alpha_{i})
       \right) \text{\,,}
 \end{align}
-\par
-\begin{tabular}{@{}ll@{ --- }p{0.74\textwidth}}
+\begin{explanation}
 где & $ \Gamma $ & гамма-функция "---  расширение понятия факториала на поле комплексных чисел; \\
     & $ n_{ijk} $ & условное, более краткое, обозначение для $n[v_{ik}, \phi_i[j], i, B_S]$; \\
-    & $ n_{ij} $ & условное, более краткое, обозначение для $n[\phi_i[j], i, B_S]$. \\[\parsep]
-\end{tabular}
+    & $ n_{ij} $ & условное, более краткое, обозначение для $n[\phi_i[j], i, B_S]$. 
+\end{explanation}
 
 Помимо использования формулы~(\ref{eq:arch_and_mod:k2_algorithm:log_node_optimization_obj}) в реализации были произведены дополнительные оптимизации, продиктованные результатами профилирования реализации алгоритма.
 
@@ -605,12 +604,11 @@ end
                  p(x, y) \log{ \left(\frac{p(x, y)}{p(x)\,p(y)}
                               \right) } \text{\,,}
 \end{equation}
-\par
-\begin{tabular}{@{}ll@{ --- }p{0.71\textwidth}}
+\begin{explanation}
 где & $ p(x, y)$ & совместное распределение случайных величин $X$ и $Y$; \\
     & $ p(y) $ & безусловное распределение случайной величины $X$; \\
-    & $ p(x) $ & безусловное распределение случайной величины $Y$. \\[\parsep]
-\end{tabular}
+    & $ p(x) $ & безусловное распределение случайной величины $Y$.
+\end{explanation}
 
 На практике при вычислении $I(X; Y)$ следует соблюдать осторожность, т.\,к. относительные частоты, используемые для оценки $p(x)$, $p(y)$ и $p(x, y)$, могут необоснованно принимать значение \num{0} из-за отсутствия некоторых состояний переменных в наблюдаемых данных.
 В таких случаях вместо нуля используется достаточно малое число.
