--- a/MiKTeX/sec_domain.tex
+++ b/MiKTeX/sec_domain.tex
@@ -20,10 +20,9 @@
   \label{eq:domain:bayes_net:joint_disitr}
   P(X_1, X_2,\dotsc, X_n) = \prod_{i = 0}^{n}{P(X_i|X_{\pi_i})} \text{\,,}
 \end{equation}
-\par
-\begin{tabular}{@{}ll@{ --- }p{0.74\textwidth}}
-где & $ \pi_i $ & множество индексов переменных"=родителей для переменной $X_i$.\\[\parsep]
-\end{tabular}
+\begin{explanation}
+где & $ \pi_i $ & множество индексов переменных"=родителей для переменной $X_i$.
+\end{explanation}
 
 Данное представление совместного распределения все так же имеет экспоненциальный рост количества стохастических параметров от количества переменных и их состояний.
 Но на практике, обычно сети имеют небольшую связанность, далекую от полного графа, что позволяет представлять совместное распределение с помощью достижимого количества параметров.
@@ -163,15 +162,14 @@
   \label{eq:domain:mdl:description_length}
   l(x^{R}[n]) = \min_{g \in G}\left[ l_{G}(g) + l_{g}(x^{R}[n]) \right] \text{\,,}
 \end{equation}
-\par
-\begin{tabular}{@{}ll@{ --- }p{0.68\textwidth}}
+\begin{explanation}
 где & $ x^R $ & вектор размерностью $R$, содержащий значения переменных (аттрибутов). Представлен как $ x^R =\newline= (x^{(1)}, x^{(2)}, \dotsc, x^{(R)} ) $, где атрибут $ x^{(j)} $ может принимать $ \alpha_{j} $ значений, $ j = 1,\dotsc,R.$ \\
     & $ n $ & количество случаев в экспериментальных данных;  \\
     & $ x^R[n] $ & набор экспериментальны данных; \\
     & $ G $ & множество моделей; \\
     & $ l_{G}(g) $ & длина описания модели; \\
-    & $ l_{g}(x^{R}[n]) $ & длина представления данных $ x^R[n] $ моделью $ g \in G $. \\[\parsep]
-\end{tabular}
+    & $ l_{g}(x^{R}[n]) $ & длина представления данных $ x^R[n] $ моделью $ g \in G $.
+\end{explanation}
 
 Для вычисления длинны кодирования модели и длинны кодирования данных с использованием модели в реализации дипломного проекта использовались результаты, приведенные в работах~\cite{Suzuki93,terentyev_2006}.
 Собственно модель вероятностной сети состоит из таблиц условных и безусловных распределений и отношений <<родитель"=потомок>> между вершинами.
@@ -180,10 +178,9 @@
   \label{eq:domain:mdl:model_length}
   l_{G}(g) = \frac{\log{n}}{2} \cdot \sum_{k = 1}^{R} S_k(g) (\alpha_k - 1) \text{\,,}
 \end{equation}
-\par
-\begin{tabular}{@{}ll@{ --- }p{0.73\textwidth}}
-где & $ S_k(g) $ & количество возможных назначений переменных"=родителей переменной $X_k$, способ вычисления данного значения отличается у классических сетей и модификации упомянутой в разделе~\ref{sub:domain:bayes_net} на странице~\pageref{page:domain:bayes_mod}. \\[\parsep]
-\end{tabular}
+\begin{explanation}
+где & $ S_k(g) $ & количество возможных назначений переменных"=родителей переменной $X_k$, способ вычисления данного значения отличается у классических сетей и модификации упомянутой в разделе~\ref{sub:domain:bayes_net} на странице~\pageref{page:domain:bayes_mod}.
+\end{explanation}
 
 Значение функции $S_k(g)$ для классических байесовых сетей вычисляется по формуле~(\ref{eq:domain:mdl:classic_parent_states}), для модификации упомянутой в разделе~\ref{sub:domain:bayes_net} на странице~\pageref{page:domain:bayes_mod} "--- по формуле~(\ref{eq:domain:mdl:mod_parent_states}):
 \begin{align}
@@ -203,11 +200,10 @@
     \sum_{q = 0}^{\alpha_{k + 1} - 1}
     -n[q, s, k, g] \log \frac{n[q, s, k, g]}{n[s, k, g]} \text{\,,}
 \end{equation}
-\par
-\begin{tabular}{@{}ll@{ --- }p{0.66\textwidth}}
+\begin{explanation}
 где & $ n[s, k, g] $ & количество случаев в экспериментальных данных $ x^R[n] $ в которых переменные"=родители переменной $X_k$ принимают назначение $s$; \\
-    & $ n[q, s, k, g] $ & количество случаев в экспериментальных данных $ x^R[n] $ в которых переменные"=родители переменной $X_k$ принимают назначение $s$, а переменная $X_k$ принимает назначение $q$. \\[\parsep]
-\end{tabular}
+    & $ n[q, s, k, g] $ & количество случаев в экспериментальных данных $ x^R[n] $ в которых переменные"=родители переменной $X_k$ принимают назначение $s$, а переменная $X_k$ принимает назначение $q$.
+\end{explanation}
 
 Таким образом, приведенные выше формулы, могут быть использованы для оценки качества структуры сети и её сложности.
 Имея данную оценку можно использовать различные стратегии поиска в пространстве возможных моделей, минимизируя целевую функцию~(\ref{eq:domain:mdl:description_length}).
