--- a/MiKTeX/preamble.tex
+++ b/MiKTeX/preamble.tex
@@ -206,7 +206,7 @@
 
 \newenvironment{explanation}
     {
-    %%% Следующие строки
+    %%% Следующие строки определяют специфические требования кафедр. Раскоменнтируйте нужные 2 строки
     %% стандартный абзац, Кафедра информатики
     \par 
     \tabularx{\textwidth-\fivecharsapprox}{@{}ll@{ --- } X }
