Fix pscyr import.

--- a/MiKTeX/preamble.tex
+++ b/MiKTeX/preamble.tex
@@ -3,6 +3,12 @@
 % Примечание: параметр draft помечает строки, вышедшие за границы страницы, прямоугольником, в фильной версии его нужно удалить.
 \documentclass[a4paper,14pt,russian,oneside,final]{extreport}
 
+% Зачем: Улучшает отображение русских шрифтов.
+% Из руководства к PSCyr: "Во избежание проблем пакет PSCyr должен загружаться перед пакета-ми inputenc и babel".
+% Примечание: Требует шаманства при установке, инструкция http://plumbum-blog.blogspot.com/2010/06/miktex-28-pscyr-04d.html
+% http://blog.harrix.org/?p=444
+\usepackage{pscyr}
+
 % Зачем: Установка кодировки исходных файлов.
 \usepackage[utf8]{inputenc}
 
@@ -17,11 +23,6 @@
 
 % Зачем: Учет особенностей различных языков.
 \usepackage[russian]{babel}
-
-% Зачем: Улучшает отображение русских шрифтов.
-% Примечание: Требует шаманства при установке, инструкция http://plumbum-blog.blogspot.com/2010/06/miktex-28-pscyr-04d.html
-\usepackage{pscyr}
-
 
 % Зачем: Добавляет поддержу дополнительных размеров текста 8pt, 9pt, 10pt, 11pt, 12pt, 14pt, 17pt, and 20pt.
 % Почему: Пункт 2.1.1 Требований по оформлению пояснительной записки.
