Заготовка для курсового проекта/курсовой работы.
Титульный лист выполнен в соответствии с "ПОЛОЖЕНИЕ ОБ ОРГАНИЗАЦИИ И
ПРОВЕДЕНИИ КУРСОВОГО ПРОЕКТИРОВАНИЯ В БГУИР" от 11.12.2013
http://www.bsuir.by/m/12_100229_1_79807.docx

--- a/MiKTeX/preamble.tex
+++ b/MiKTeX/preamble.tex
@@ -415,6 +415,9 @@
 % http://ctan.org/pkg/gensymb
 \usepackage{gensymb}
 
+% Зачем: преобразовывать текст в верхний регистр командой MakeTextUppercase
+\usepackage{textcase}
+
 % Зачем: Переносы в словах с тире.
 % Тире в словае заменяем на \hyph: аппаратно\hyphпрограммный.
 % https://stackoverflow.com/questions/2193307/how-to-get-latex-to-hyphenate-a-word-that-contains-a-dash#
