Добавлено определение команды \No для символа № (см. issue #24 fix)

--- a/MiKTeX/preamble.tex
+++ b/MiKTeX/preamble.tex
@@ -191,6 +191,10 @@
 \usepackage[nooneline]{caption}
 \usepackage{subcaption}
 
+% Зачем: чтобы работала \No в новых латехах
+\DeclareRobustCommand{\No}{\ifmmode{\nfss@text{\textnumero}}\else\textnumero\fi}
+
+
 % Зачем: Задание подписей, разделителя и нумерации частей рисунков
 % Почему: Пункт 2.5.5 Требований по оформлению пояснительной записки.
 \DeclareCaptionLabelFormat{stbfigure}{Рисунок \emph{#2}}
