--- a/MiKTeX/preamble.tex
+++ b/MiKTeX/preamble.tex
@@ -191,6 +191,16 @@
 \usepackage[nooneline]{caption}
 \usepackage{subcaption}
 
+
+% Зачем: поворот ячеек таблиц на 90 градусов
+\usepackage{rotating}
+\DeclareRobustCommand{\povernut}[1]{\begin{sideways}{#1}\end{sideways}}
+
+
+% Зачем: когда в формулах много кириллических символов команда \text{} занимает много места
+\DeclareRobustCommand{\x}[1]{\text{#1}}
+
+
 % Зачем: Задание подписей, разделителя и нумерации частей рисунков
 % Почему: Пункт 2.5.5 Требований по оформлению пояснительной записки.
 \DeclareCaptionLabelFormat{stbfigure}{Рисунок \emph{#2}}
