Новое окружение для "где". (см. issue #27 resolved) нормально работают переносы на новую строку и на новую страницу.

--- a/MiKTeX/course_content.tex
+++ b/MiKTeX/course_content.tex
@@ -1,1 +1,9 @@
 Hello World!
+\begin{equation}
+E=mc^2
+\end{equation}
+\begin{explanationx}
+\item[где] $E$ --- энергия объекта;
+\item  $m$ --- масса объекта;
+\item  $c$ --- скорость света в вакууме, равная 299 792 458 м/с.
+\end{explanationx}
