Фикс исправляет нумерацию в документе и исправляет гиперссылки в pdf

--- a/MiKTeX/references.tex
+++ b/MiKTeX/references.tex
@@ -1,6 +1,7 @@
 % Зачем: Изменение надписи для списка литературы
 % Почему: Пункт 2.8.1 Требований по оформлению пояснительной записки.
 \renewcommand{\bibsection}{\sectioncentered*{Cписок использованных источников}}
+\phantomsection\pagebreak% исправляет нумерацию в документе и исправляет гиперссылки в pdf
 \addcontentsline{toc}{section}{Cписок использованных источников}
 
 % Зачем: Печать списка литературы. База данных литературы - файл bibliography_database.bib
