--- a/MiKTeX/preamble.tex
+++ b/MiKTeX/preamble.tex
@@ -3,28 +3,20 @@
 % Примечание: параметр draft помечает строки, вышедшие за границы страницы, прямоугольником, в фильной версии его нужно удалить.
 \documentclass[a4paper,14pt,russian,oneside,final]{extreport}
 
-% Зачем: Предоставляет проприетарный Times New Roman.
-% ОБНОВЛЕНИЕ: лучше использовать scalable-cyrfonts-tex: меньше проблем с установкой
-% Из руководства к PSCyr: "Во избежание проблем пакет PSCyr должен загружаться перед пакета-ми inputenc и babel".
-% Примечание: Требует шаманства при установке, инструкция http://plumbum-blog.blogspot.com/2010/06/miktex-28-pscyr-04d.html
-% http://blog.harrix.org/?p=444
-% надо закомментировать это, чтобы использовать scalable-cyrfonts-tex:
-\usepackage{pscyr}
+% Зачем: Настройка Times New Roman.
+% Рекомендовано для Windows (нужен PSCyr, подробности см. в fonts_windows.tex)
+% раскомментировать, чтобы использовать:
+%\input{fonts_windows}% не забудьте закомментировать \input{fonts_linux}
 
-% Зачем: Предоставляет свободный Times New Roman.
-% Шрифт идёт вместе с пакетом scalable-cyrfonts-tex в Ubuntu/Debian
-% раскомментировать, чтобы использовать scalable-cyrfonts-tex:
-%\usefont{T2A}{ftm}{m}{sl}
-
+% Рекомендовано для Linux (нужен scalable-cyrfonts-tex, подробности см. в fonts_linux.tex)
+% раскомментировать, чтобы использовать:
+\input{fonts_linux}% не забудьте закомментировать \input{fonts_windows}
 
 % Зачем: Установка кодировки исходных файлов.
 \usepackage[utf8]{inputenc}
 
 % Зачем: Делает результирующий PDF "searchable and copyable".
 \usepackage{cmap}
-
-% Зачем: Выбор внутренней TeX кодировки.
-\usepackage[T2A]{fontenc}
 
 % Зачем: Чтобы можно было использовать русские буквы в формулах, но в случае использования предупреждать об этом.
 \usepackage[warn]{mathtext}
