СТП: титульный лист приведен в соответствие:
- правильное оформление секции "к защите допустить"
- код специальности не выделяется болдом
- Особенности кафедры/факультета: "ПОЯСНИТЕЛЬНАЯ ЗАПИСКА" - болдом, согласно требованиям кафедры ПИКС (и факултета ФКП, похоже)
- пояснения про охрану труда

--- a/MiKTeX/diploma_title.tex
+++ b/MiKTeX/diploma_title.tex
@@ -14,21 +14,25 @@
       \end{flushleft}
     \end{minipage}\\[1em]
 
-    \begin{minipage}{\textwidth}
-      \begin{flushright}
-        \textit{К защите допустить:}\\
-        Заведующий кафедрой информатики\\
-        \underline{\hspace*{4.5cm}} Л.\,И.~Минченко
-      \end{flushright}
-    \end{minipage}\\[3em]
+    \begin{flushright}
+      \begin{minipage}{0.4\textwidth}
+        \textit{К защите допустить:}\\[0.8em]
+        Заведующий кафедрой ПИКС\\[0.45em]
+        \underline{\hspace*{2.8cm}} И.\,Н.~Цырельчук
+      \end{minipage}\\[2.2em]
+    \end{flushright}
 
+    %%
+    %% ВНИМАНИЕ: на некторых факультетах (ФКП) и кафедрах (ПИКС) слова "ПОЯСНИТЕЛЬНАЯ ЗАПИСКА" предлагается (требуется) оформлять полужирным начертанием. Раскомментируйте нужную для вас строку:
+    %%
+    %\textbf{ПОЯСНИТЕЛЬНАЯ ЗАПИСКА}\\
     {ПОЯСНИТЕЛЬНАЯ ЗАПИСКА}\\
     {к дипломному проекту}\\
     {на тему:}\\[1em]
     \textbf{\large АЛГОРИТМЫ ПОСТРОЕНИЯ ВЕРОЯТНОСТНЫХ СЕТЕЙ}\\[1em]
 
 
-    {БГУИР ДП \textbf{1-31 03 04 07 093} ПЗ}\\[2em]
+    {БГУИР ДП 1-31 03 04 07 093 ПЗ}\\[2em]
     
     \begin{tabular}{ p{0.65\textwidth}p{0.25\textwidth} }
       Студент: & Ю.\,А.~Ярошевич \\
@@ -36,6 +40,13 @@
       Консультанты: &\\
       \hspace*{3ex}\emph{от кафедры информатики} & А.\,А.~Волосевич \\
       \hspace*{3ex}\emph{по экономической части} & А.\,В.~Рябов \\
+      %%
+      %% ВНИМАНИЕ: в зависимости от выбранной темы, у вас консультант может быть как по охране труда, так и по:
+        % экологической безопасности
+        % ресурсосбережению
+        % энергосбережению
+      %%
+      %% Впишите правильную формулировку по необходимости
       \hspace*{3ex}\emph{по охране труда} & Е.\,А.~Колосова \\
       Нормоконтролёр: & С.\,И.~Сиротко\\
       & \\
