СТП: убраны двоеточия на тиульном листе

--- a/MiKTeX/diploma_title.tex
+++ b/MiKTeX/diploma_title.tex
@@ -35,8 +35,8 @@
     {БГУИР ДП 1-31 03 04 07 093 ПЗ}\\[2em]
     
     \begin{tabular}{ p{0.65\textwidth}p{0.25\textwidth} }
-      Студент: & Ю.\,А.~Ярошевич \\
-      Руководитель: & А.\,А.~Волосевич \\
+      Студент & Ю.\,А.~Ярошевич \\
+      Руководитель & А.\,А.~Волосевич \\
       Консультанты: &\\
       \hspace*{3ex}\emph{от кафедры информатики} & А.\,А.~Волосевич \\
       \hspace*{3ex}\emph{по экономической части} & А.\,В.~Рябов \\
@@ -48,9 +48,9 @@
       %%
       %% Впишите правильную формулировку по необходимости
       \hspace*{3ex}\emph{по охране труда} & Е.\,А.~Колосова \\
-      Нормоконтролёр: & С.\,И.~Сиротко\\
+      Нормоконтролёр & С.\,И.~Сиротко\\
       & \\
-      Рецензент: &
+      Рецензент &
     \end{tabular}
     
     \vfill
