СТП: @todo: нужно привести реферат в соответствие с СТП-01 2013

--- a/MiKTeX/abstract.tex
+++ b/MiKTeX/abstract.tex
@@ -1,5 +1,9 @@
 \sectioncentered*{Реферат}
 \thispagestyle{empty}
+%%
+%% ВНИМАНИЕ: этот реферат не соответствует СТП-01 2013
+%% пример оформления реферата смотрите здесь: http://www.bsuir.by/m/12_100229_1_91132.docx 
+%%
 
 \emph{Ключевые слова}: вероятностные модели; байесовы сети; вывод структуры сети по данным; принцип минимальной длинны описания; оценка апостериорной вероятности.
 
